<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.matecode.focusgarden.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_GardenFragment"
            app:destination="@id/GardenFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_CategoryFragment"
            app:destination="@id/CategoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.matecode.focusgarden.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/GardenFragment"
        android:name="com.matecode.focusgarden.garden.GardenFragment"
        android:label="@string/garden_fragment_label"
        tools:layout="@layout/fragment_garden">

        <action
            android:id="@+id/action_GardenFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />

        <action
            android:id="@+id/action_GardenFragment_to_StatisticsFragment"
            app:destination="@id/StatisticsFragment" />
    </fragment>

    <fragment
        android:id="@+id/StatisticsFragment"
        android:name="com.matecode.focusgarden.statistics.StatisticsFragment"
        android:label="@string/statistics_fragment_label"
        tools:layout="@layout/fragment_statistics">

        <action
            android:id="@+id/action_StatisticsFragment_to_GardenFragment"
            app:destination="@id/GardenFragment" />

    </fragment>

    <fragment
        android:id="@+id/CategoryFragment"
        android:name="com.matecode.focusgarden.category.CategoryFragment"
        android:label="@string/category_fragment_label"
        tools:label="@layout/fragment_category">

            <action
                android:id="@+id/action_CategoryFragment_to_FirstFragment"
                app:destination="@+id/FirstFragment" />
    </fragment>

</navigation>